[package]
name = "WebServer_kevin"
version = "0.1.0"
authors = ["Kevin ltwoggbuty2mh@gmail.com"]
edition = "2021"
license = "MIT"
description = "A simple web server that use tcp to deal request and return smoe simple content"

[[bin]]
name = "WebServer"
path = "src/bin/main.rs"

[dependencies]
futures = { version = "0.3.30", features = ["thread-pool"] }
